--- a/bestill.html
+++ b/bestill.html
@@ -31,7 +31,7 @@
         <button class="py-1 px-3 m-1 bg-white rounded-md shadow border border-gray-200 hover:bg-gray-100">Kategori 5</button>
         <button class="py-1 px-3 m-1 bg-white rounded-md shadow border border-gray-200 hover:bg-gray-100">Kategori 6</button>
     </div>
-    <div class="min-h-screen pt-5 px-10 bg-gray-50 lg:max-w-7xl lg:mx-auto">
+    <div class="min-h-screen pt-5 px-10 lg:max-w-7xl lg:mx-auto">
         <p class="text-xl mb-5 border-b-2 pb-1 border-gray-300">Varmmat</p>
         <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-4">
             <a href="" class="flex flex-col bg-white border border-gray-200 shadow rounded-md w-full md:flex-1 relative">
