--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <div class="text-xl font-bold text-gray-900 md:text-2xl text-center">
                 Klar for å bestille?
             </div>
-            <form class="space-y-4 md:space-y-6">
+            <form action="api/auth/SendCode.php" method="post" class="space-y-4 md:space-y-6">
                 <div>
                     <label for="email" class="block mb-2 text-sm font-medium text-gray-900">E-post</label>
                     <input type="email" name="email" id="email" class="bg-gray-50 text-sm border border-gray-300 text-gray-900 sm:text-sm rounded-lg focus:ring-gray-600 focus:border-gray-600 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-red-500 dark:focus:border-red-500" placeholder="navn@osloskolen.no" required="">
