--- a/verify.html
+++ b/verify.html
@@ -31,7 +31,7 @@
                 Bekreft e-postadressen din
             </div>
             <p class="pb-5 text-sm text-gray-500">Skriv inn den 6 sifret koden vi har sendt til e-posten din.</p>
-            <form class="space-y-4 md:space-y-6">
+            <form action="api/auth/VerifyCode.php" method="post" class="space-y-4 md:space-y-6">
                 <div class="flex mb-2 justify-center space-x-2 rtl:space-x-reverse" id="code-inputs">
                     <input type="text" name="1" maxlength="1" class="block text-lg font-extrabold text-center text-gray-900 bg-white border border-gray-300 rounded-md focus:ring-primary-500 focus:border-primary-500 w-1/6 h-16" required />
                     <input type="text" name="2" maxlength="1" class="block text-lg font-extrabold text-center text-gray-900 bg-white border border-gray-300 rounded-md focus:ring-primary-500 focus:border-primary-500 w-1/6 h-16" required />
