--- a/bestill.html
+++ b/bestill.html
@@ -47,8 +47,8 @@
                     </svg>
                 </div>
                 <div class="absolute top-0 right-10">
-                    <p class="w-10 h-10 p-2 text-gray-600 bg-gray-50 flex items-center justify-center">2</p>
-                </div>                
+                    <input type="text" class="w-10 h-10 p-2 text-gray-600 bg-gray-50 border-none text-center" value="1">
+                </div>                          
                 <div class="absolute top-0 right-20">
                     <svg class="w-10 h-10 p-2 rounded-bl-2xl text-gray-600 hover:text-gray-700 bg-gray-100 hover:bg-gray-200" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24">
                         <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 12h14m-7"/>
